tests/neg/i11581.scala
class Abc:
  def a = {
    println(10)
    10
  }

  ;  ;

  end a
  end a // error
;  ;
end Abc
end Abc // error

class D:
end D
end D // error

class Xyz {
  def a =
    println(10)
    10

}


;
end Xyz
;
;

end Xyz // error

